rearrange nav to allow controller access to planner

--- a/src/orb_nav/CMakeLists.txt
+++ b/src/orb_nav/CMakeLists.txt
@@ -137,9 +137,9 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-add_executable(${PROJECT_NAME}_path_plan src/djikstra.cpp)
+#add_executable(${PROJECT_NAME}_path_plan src/djikstra.cpp src/helpers.cpp)
 
-add_executable(${PROJECT_NAME}_sim src/sim_bot.cc)
+add_executable(${PROJECT_NAME}_sim src/sim_bot.cc src/djikstra.cpp src/helpers.cpp)
 target_link_libraries(${PROJECT_NAME}_sim ${catkin_LIBRARIES})
 
 ## Rename C++ executable without prefix
