make messages better tailored to task

--- a/src/orb_nav/CMakeLists.txt
+++ b/src/orb_nav/CMakeLists.txt
@@ -54,7 +54,8 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
 add_message_files(
    FILES
-   orb_nav_goal.msg
+   NavGoal.msg
+   OrbPose.msg
 )
 
 ## Generate services in the 'srv' folder
