--- a/src/orb_nav/CMakeLists.txt
+++ b/src/orb_nav/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(catkin REQUIRED COMPONENTS
   sensor_msgs
   std_msgs
   nav_msgs
+  jackal_msgs_amrl
   message_generation
 )
 
@@ -52,11 +53,11 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-add_message_files(
-   FILES
-   NavGoal.msg
-   OrbPose.msg
-)
+# add_message_files(
+#    FILES
+#    NavGoal.msg
+#    OrbPose.msg
+# )
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -73,10 +74,10 @@ add_message_files(
 # )
 
 ## Generate added messages and services with any dependencies listed here
-generate_messages(
-   DEPENDENCIES
-   std_msgs
-)
+# generate_messages(
+#    DEPENDENCIES
+#    std_msgs
+# )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
